# aider-mcp-server

./: .dockerignore  .env.sample  .gitignore  .mcp.json  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.claude/commands/: multi_aider_sub_agent.md
.github/: BRANCHING_GUIDELINES.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  user_story.yml
.github/workflows/: auto-merge.yml  ci.yml  docker-publish.yml  preview.yml
ai_docs/: just-prompt-example-mcp-server.xml  programmable-aider-documentation.md
docs/: PREVIEW_BUILDS.md
specs/: init-aider-mcp-exp.md
src/aider_mcp_server/: __init__.py  __main__.py  server.py
src/aider_mcp_server/atoms/: __init__.py  data_types.py  logging.py  utils.py
src/aider_mcp_server/atoms/tools/: aider_ai_code.py  aider_list_models.py
src/aider_mcp_server/tests/atoms/: __init__.py  test_logging.py
src/aider_mcp_server/tests/atoms/tools/: __init__.py  test_aider_ai_code.py  test_aider_list_models.py
